--- a/retiro.css
+++ b/retiro.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Canada';
-    src: url('./assets/Canada.otf') format('truetype'); /* Ajusta la ruta según donde hayas guardado la fuente */
+    src: url('./assets/Canada.otf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
@@ -13,44 +13,31 @@ body {
     color: #F4F4F9;
 }
 
-h1,h2{
+h1, h2 {
     font-family: 'Canada', sans-serif;
 }
 
-form{
+form {
     padding-top: 70px;
 }
 
-form label{
+form label {
     font-family: 'Canada', sans-serif;
 }
 
 .input-group .form-control {
-    max-width: 100px; /* Ajusta el ancho del input manual */
+    max-width: 100px;
 }
 
 .logo {
     max-height: 100px;
-    margin-left: auto; /* Asegura que el logo se alinee a la derecha */
+    margin-left: auto;
 }
+
 .main-container {
     display: flex;
     flex: 1;
     background-color: #2C1A47; 
-}
-
-.left-section {
-    flex: 1; /* Ocupa 1/3 de la pantalla */
-    padding: 20px; /* Añade un poco de padding */
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    padding: 20px;
-}
-
-.saludo{
-    font-size: 20px; 
-    padding-left: 20px;
 }
 
 .right-section {
@@ -63,10 +50,23 @@ form label{
     object-fit: cover;
 }
 
+.left-section {
+    flex: 2;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.saludo {
+    font-size: 20px;
+    padding-left: 20px;
+}
+
 a.logout-button {
     position: absolute;
     top: 10px;
-    right: 20px;
+    left: 20px;
     background-color: #5F288F;
     color: white;
     border-radius: 5px;
@@ -74,7 +74,6 @@ a.logout-button {
     border: none;
     font-family: 'Canada', sans-serif;
     padding: 10px 20px;
-    border-radius: 5px;
 }
 
 a.logout-button:hover {
@@ -95,21 +94,20 @@ a.logout-button:hover {
     background-color: #FFC857;
 }
 
-/*Barra*/
-
+/* Barra de rango */
 input[type="range"]::-webkit-slider-thumb {
     -webkit-appearance: none;
     appearance: none;
     width: 18px;
     height: 18px;
-    background-color: #9b6594; 
+    background-color: #9b6594;
     border-radius: 50%;
     cursor: pointer;
 }
 
-input[type="range"]::-webkit-slider-thumb:active{
+input[type="range"]::-webkit-slider-thumb:active {
     transform: scale(1.2);
-    background-color: #c99fc3; 
+    background-color: #c99fc3;
 }
 
 @media (max-width: 1000px) {
@@ -117,18 +115,17 @@ input[type="range"]::-webkit-slider-thumb:active{
         flex-direction: column;
     }
 
-    form{
+    form {
         padding: 0;
     }
-    
-    .logo{
+
+    .logo {
         padding-top: 20px;
     }
 
     .right-section img {
         height: 80vh;
     }
-
 }
 
 @media (max-width: 768px) {
