--- a/sucursales.css
+++ b/sucursales.css
@@ -7,12 +7,13 @@
 
 body {
     font-family: 'Nunito', sans-serif;
-    height: 100vh;
+    min-height: 100vh;
     margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
+    overflow: hidden; /* Evita el desplazamiento adicional */
 }
 
 body::before {
@@ -30,7 +31,7 @@ body::after {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.6); 
+    background-color: rgba(0, 0, 0, 0.7); 
     z-index: -1; 
 }
 
@@ -72,16 +73,17 @@ form label {
     font-size: 20px;
 }
 
-.back-button {
+.back-button{
     position: absolute;
     top: 10px;
-    right: 20px;
+    left: 20px;
     background-color: #5F288F;
     color: white;
     border-radius: 5px;
     text-decoration: none;
     border: none;
     font-family: 'Canada', sans-serif;
+    width: 100px;
 }
 
 .back-button:hover {
@@ -163,3 +165,24 @@ ul.sucursal-list {
   #edit-delete-buttons {
     margin-top: 10px;
   }
+
+  .swal2-container {
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+    padding: 0 !important;
+    margin: 0 !important;
+    position: fixed !important;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 9999 !important; /* Asegura que esté encima de todo */
+}
+.swal2-popup {
+    max-width: 500px !important; /* Tamaño máximo del modal */
+    max-height: 300px !important; /* Ajusta según el contenido */
+    overflow: hidden !important; /* Evita desplazamientos internos */
+    padding: 20px !important;
+    margin: 0 auto !important;
+}
