--- a/retiro.css
+++ b/retiro.css
@@ -52,8 +52,8 @@ form label {
 }
 
 .saludo {
-    font-size: 20px; 
-    padding-left: 20px;
+    font-size: 20px;
+    padding-bottom: 30px;
 }
 
 .right-section {
