--- a/sucursales.css
+++ b/sucursales.css
@@ -165,7 +165,6 @@ ul.sucursal-list li {
 #edit-delete-buttons {
     margin-top: 10px;
 }
-
 .swal2-container {
     display: flex !important;
     justify-content: center !important;
@@ -187,6 +186,46 @@ ul.sucursal-list li {
     padding: 20px !important;
     margin: 0 auto !important;
 }
+
+/* Estilos para los botones de SweetAlert2 */
+.swal2-confirm {
+    background-color: #5F288F !important; /* Color de fondo del botón de confirmación */
+    color: white !important; /* Color del texto del botón de confirmación */
+    border: none !important; /* Sin borde */
+    border-radius: 5px !important; /* Borde redondeado */
+    padding: 10px 20px !important; /* Espaciado interno */
+    font-family: 'Canada', sans-serif !important; /* Fuente */
+    font-size: 16px !important; /* Tamaño de fuente */
+}
+
+.swal2-cancel {
+    background-color: gray !important; /* Color de fondo del botón de cancelar */
+    color: white !important; /* Color del texto del botón de cancelar */
+    border: none !important; /* Sin borde */
+    border-radius: 5px !important; /* Borde redondeado */
+    padding: 10px 20px !important; /* Espaciado interno */
+    font-family: 'Canada', sans-serif !important; /* Fuente */
+    font-size: 16px !important; /* Tamaño de fuente */
+}
+
+.swal2-deny {
+    background-color: #5F288F !important; /* Color de fondo del botón de negar */
+    color: white !important; /* Color del texto del botón de negar */
+    border: none !important; /* Sin borde */
+    border-radius: 5px !important; /* Borde redondeado */
+    padding: 10px 20px !important; /* Espaciado interno */
+    font-family: 'Canada', sans-serif !important; /* Fuente */
+    font-size: 16px !important; /* Tamaño de fuente */
+}
+
+.swal2-confirm:hover, .swal2-deny:hover {
+    background-color: #14c532 !important; /* Color de fondo al pasar el ratón sobre los botones de confirmación y negar */
+}
+
+.swal2-cancel:hover {
+    background-color: darkgray !important; /* Color de fondo al pasar el ratón sobre el botón de cancelar */
+}
+
 
 /* Ajustes generales para pantallas pequeñas */
 @media (max-width: 1000px) {
