Responsivo sucursales listo

--- a/style.css
+++ b/style.css
@@ -244,7 +244,7 @@ input, button, textarea, select {
 
 #menu-icon {
     font-size: 50px;
-    color: var(--color-primario);
+    color: #383737;
     cursor: pointer;
     z-index: 10001;
     display: none;
