Correo index funcionando
agregado de nuevo archivo enviarcorreo para el form de contacto index y cambio en el form de contacto y estilo de alerta

--- a/style.css
+++ b/style.css
@@ -1284,6 +1284,24 @@ textarea {
         height: 28px;
     }
 }
+/*alerta*/
+.alert {
+    padding: 15px;
+    border-radius: 4px;
+    margin-top: 20px;
+}
+
+.alert-success {
+    background-color: #d4edda;
+    border-color: #c3e6cb;
+    color: #155724;
+}
+
+.alert-danger {
+    background-color: #f8d7da;
+    border-color: #f5c6cb;
+    color: #721c24;
+}
 
 /* Media queries para tabletas */
 @media (max-width: 1024px) {
