--- a/Login-registro.css
+++ b/Login-registro.css
@@ -125,6 +125,12 @@ a.logout-button:hover {
 .btn-primary:hover {
     background-color: #14c532;
 }
+.btn-primary:disabled{
+    opacity: 0.5;
+    background-color: #5F288F;
+}
+
+
 
 @media (max-width: 1000px) {
     .main-container {
