--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 }
 
 .morado{
-    color: var(--color-primario);
+    color: #56257e;
 }
 .verde{
     color: var(--color-secundario);
@@ -344,7 +344,7 @@ input, button, textarea, select {
     font-weight: 500;
     text-align: center;
     color: #fff;
-    background-color: var(--color-complementario);
+    background-color: #3f8d23;
     border-radius: 0.375rem;
     opacity: 0;
     animation: slideBottom 1s ease forwards;
@@ -352,7 +352,7 @@ input, button, textarea, select {
 }
 
 .card-button-home:hover {
-    background-color: #0d8823;
+    background-color: #326c1f;
 }
 
 .card-button-home:focus {
@@ -492,6 +492,8 @@ input, button, textarea, select {
   .contenedor__texto {
     flex: 1;
     padding: 20px;
+    margin-top: 40px;
+    text-align: justify;
   }
   
   .contenedor__titulo {
@@ -518,7 +520,7 @@ input, button, textarea, select {
     width: 10px;
     height: 10px;
     border-radius: 50%;
-    background-color: var(--color-primario);
+    background-color: var(--color-secundario);
     cursor: pointer;
   }
   
@@ -739,8 +741,7 @@ button:disabled {
 
     .card-title {
         font-size: 1.25rem; /* Ajusta el tamaño del título */
-        margin-top:0px;
-        padding-top: 0px;
+        margin-top:50px;
     }
 
     .card-description {
@@ -904,7 +905,7 @@ button:disabled {
 
 
 .title {
-    font-size: 1.125rem;
+    font-size: 1.5rem;
     font-weight: 600;
     color: #1f2937;
 }
@@ -914,13 +915,13 @@ button:disabled {
 .time {
     display: block;
     margin-bottom: 8px;
-    font-size: 0.875rem;
+    font-size: 1.1rem;
     font-weight: 400;
     color: #9ca3af;
 }
 
 .description {
-    font-size: 1rem;
+    font-size: 1.2rem;
     font-weight: 400;
     color: #6b7280;
 }
@@ -1213,12 +1214,31 @@ textarea {
     margin-bottom: 10px;
     font-size: 1.1rem;
     color: #333;
+    transition: color 0.3s;
 }
 
-.contact-list .icon {
+.contact-list li a {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: #333; /* Color inicial del texto */
+    transition: color 0.3s;
+}
+
+.contact-list li a:hover {
+    color: var(--color-secundario); /* Cambia el color del texto al hacer hover */
+}
+
+.contact-list li a .icon {
     margin-right: 10px;
     width: 24px;
     height: 24px;
+    color: #5f288f; /* Color inicial del ícono */
+    transition: color 0.3s;
+}
+
+.contact-list li a:hover .icon {
+    color: var(--color-secundario); /* Cambia el color del ícono al hacer hover */
 }
 
 /* Estilos para las redes sociales */
@@ -1240,7 +1260,6 @@ textarea {
 
 .social-icon:hover {
     transform: scale(1.1);
-    color: var(--color-secundario);
 
 
 }
@@ -1430,7 +1449,7 @@ textarea {
 }
 
 .footer-social a {
-    color: #ffffff;
+    color: #ffffff; /* Color inicial del enlace y el ícono */
     border: 1px solid #ffffff;
     width: 40px;
     height: 40px;
@@ -1439,17 +1458,27 @@ textarea {
     text-align: center;
     line-height: 40px;
     border-radius: 50%;
+    transition: color 0.3s, border-color 0.3s;
 }
 
 .footer-social a:hover {
-    color: var(--color-secundario);
-    border-color:  var(--color-secundario);
+    border-color: var(--color-secundario); /* Cambia el color del borde */
 }
+
+.footer-social a i {
+    color: #ffffff; /* Color inicial del ícono */
+    transition: color 0.3s; /* Animación suave del cambio de color */
+}
+
+.footer-social a:hover i {
+    color: var(--color-secundario); /* Cambia el color del ícono al hacer hover */
+}
+
 
 .copy {
     text-align: center;
     text-transform: capitalize;
-    margin-top: 10px;
+    margin-top: 0px;
 }
 
 /* Estilos responsivos */
@@ -1627,3 +1656,4 @@ textarea {
 .swal2-cancel:hover {
     background-color: darkgray !important; /* Color de fondo al pasar el ratón */
 }
+
